[package]
name = "tikv-client"
version = "0.2.0"
keywords = ["TiKV", "KV", "distributed-systems"]
license = "Apache-2.0"
authors = ["The TiKV Project Authors"]
repository = "https://github.com/tikv/client-rust"
description = "The Rust language implementation of TiKV client."
edition = "2021"

[features]
default = ["prometheus/process"]
# Enable integration tests with a running TiKV and PD instance.
# Use $PD_ADDRS, comma separated, to set the addresses the tests use.
integration-tests = []

[lib]
name = "tikv_client"

[workspace]
members = [
    ".",
    "proto-build",
]

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1"
derive-new = "0.5"
either = "1.9"
fail = "0.5"
futures = { version = "0.3" }
lazy_static = "1"
log = "0.4"
pin-project = "1"
prometheus = { version = "0.13", features = ["push"], default-features = false }
prost = "0.11"
rand = "0.8"
regex = "1"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
tonic = { version = "0.9.0", features = ["tls"] }

[dev-dependencies]
clap = { version = "4.4.5", features = ["derive", "cargo"] }
env_logger = "0.10"
fail = { version = "0.5", features = ["failpoints"] }
proptest = "1"
proptest-derive = "0.4"
reqwest = { version = "0.11", default-features = false, features = [
    "native-tls-vendored",
] }
serde_json = "1"
# serial_test = "0.5.1"
# simple_logger = "1"
tempfile = "3.8"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

[[test]]
name = "failpoint_tests"
path = "tests/failpoint_tests.rs"
required-features = ["fail/failpoints"]
